----------------------------------------------------------------------
 OmegaT 3.1.2
----------------------------------------------------------------------
  13 Enhancements
   2 Bug fixes
   2 Localisation updates
----------------------------------------------------------------------
3.1.2 vs. 3.1.1 update 1

  Implemented requests:

  - Include notes from orphan segments and external TMXs in search
  https://sourceforge.net/p/omegat/feature-requests/965/

  - Make several identical results in Search Results window appear as one result
  https://sourceforge.net/p/omegat/feature-requests/936/

  - Dual mode progress bar 
  http://sourceforge.net/p/omegat/feature-requests/959

  - Extend check_rules.groovy with ability to sort by error type 
  https://sourceforge.net/p/omegat/feature-requests/992/

  - Show segments with spelling errors in check_rules.groovy 
  https://sourceforge.net/p/omegat/feature-requests/999/

  - Script: Strip tags only in selection 
  https://sourceforge.net/p/omegat/feature-requests/998/

  -  Make SVN_cleanup script localizable 
  https://sourceforge.net/p/omegat/feature-requests/997/

  Other enhancements:

  - When --no-team is used, Project > Dowload team project is disabled

  - Make "auto" colors more distinctive

  - Auto-completer choices can be confirmed by a double click

  - For team projects, the type of repository (Git or SVN) is now detected
automatically. When authentication is required, credentials have to be
provided first to detect the type of repository. The type of repository can
be forced by prefixing the URL with "git!" or "svn!". 
E.g., svn!https://omegat.xxxx.xx/omegat-fr

  - Scripts with a separate .properties file for user messages are now 
included in localisation bundles

  - Specific preferences can be built into a Java Web Start package at
compilation time, by putting an omegat.prefs file in /release/WebStart-specific

  Bug fixes:
